[gd_scene load_steps=37 format=3 uid="uid://b0oa26olyf76m"]

[ext_resource type="Texture2D" uid="uid://ygnac6vpeewf" path="res://assets/Art/Final Area/Main.png" id="1_fof3x"]
[ext_resource type="Script" path="res://scripts/final_area.gd" id="1_q1abb"]
[ext_resource type="Texture2D" uid="uid://dn154s8kph4di" path="res://assets/Art/Final Area/Dying Rudolph.png" id="2_clg41"]
[ext_resource type="Texture2D" uid="uid://r1khpq5fnyt7" path="res://assets/Art/Snowfall.png" id="4_3quns"]
[ext_resource type="Script" path="res://scripts/player_End_Area.gd" id="4_fcokj"]
[ext_resource type="Texture2D" uid="uid://dn618878u0iib" path="res://assets/Art/Santa Throw.png" id="5_my8wv"]
[ext_resource type="Texture2D" uid="uid://dbud5uaxne41j" path="res://assets/Art/Santa Grapple.png" id="6_e4ovh"]
[ext_resource type="Texture2D" uid="uid://cxj5ygumqnsl0" path="res://assets/Art/santa run.png" id="7_sqv6q"]
[ext_resource type="Script" path="res://scripts/animated_sprite_2d.gd" id="8_pob46"]
[ext_resource type="PackedScene" uid="uid://dxcpsrdli1q8v" path="res://Scenes/Talking Heads Hud.tscn" id="10_xfvfa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3qolq"]
size = Vector2(592.5, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_egr4q"]
atlas = ExtResource("2_clg41")
region = Rect2(285, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtowf"]
atlas = ExtResource("2_clg41")
region = Rect2(114, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_auysw"]
atlas = ExtResource("2_clg41")
region = Rect2(171, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd2x5"]
atlas = ExtResource("2_clg41")
region = Rect2(57, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_qeioj"]
atlas = ExtResource("2_clg41")
region = Rect2(0, 0, 57, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbxyi"]
atlas = ExtResource("2_clg41")
region = Rect2(228, 0, 57, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_0dlqw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_egr4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtowf")
}],
"loop": true,
"name": &"Arm_Down_Breathing",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_auysw")
}],
"loop": true,
"name": &"Default",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd2x5")
}],
"loop": false,
"name": &"Fall",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeioj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbxyi")
}],
"loop": true,
"name": &"Reaching_Breathing",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7us1b"]
size = Vector2(192.461, 10.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2mki"]
size = Vector2(206.342, 20.0462)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_io5b7"]
size = Vector2(48.1667, 30.7493)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u1k1r"]
radius = 6.0
height = 18.6667

[sub_resource type="AtlasTexture" id="AtlasTexture_iane8"]
atlas = ExtResource("5_my8wv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nx6m"]
atlas = ExtResource("5_my8wv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxks1"]
atlas = ExtResource("5_my8wv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_si4tq"]
atlas = ExtResource("6_e4ovh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5uy6"]
atlas = ExtResource("6_e4ovh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_swh2r"]
atlas = ExtResource("7_sqv6q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyy1k"]
atlas = ExtResource("7_sqv6q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_58str"]
atlas = ExtResource("7_sqv6q")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oo63r"]
atlas = ExtResource("7_sqv6q")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kco0n"]
atlas = ExtResource("7_sqv6q")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7mly"]
atlas = ExtResource("7_sqv6q")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jl5j7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iane8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nx6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nx6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxks1")
}],
"loop": true,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_si4tq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si4tq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5uy6")
}],
"loop": true,
"name": &"Grapple Throw",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_swh2r")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyy1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58str")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oo63r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58str")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyy1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kco0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7mly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kco0n")
}],
"loop": true,
"name": &"Walk",
"speed": 16.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b1jgi"]
radius = 165.647
height = 361.412

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ui4m1"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(3.59, 0, 0)
emission_shape_scale = Vector3(1, 100, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
initial_velocity_max = 35.56
gravity = Vector3(0, 98, 0)

[node name="Final Area" type="Node2D" node_paths=PackedStringArray("player", "Rudolph")]
script = ExtResource("1_q1abb")
player = NodePath("Player")
Rudolph = NodePath("Rudolph/AnimatedSprite2D")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(300, 300)
scale = Vector2(3, 3)
texture = ExtResource("1_fof3x")

[node name="AreaBorders" type="Node2D" parent="."]

[node name="TopBorder" type="StaticBody2D" parent="AreaBorders"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaBorders/TopBorder"]
position = Vector2(299.25, 27.5)
shape = SubResource("RectangleShape2D_3qolq")

[node name="BotBorder" type="StaticBody2D" parent="AreaBorders"]
position = Vector2(3, 580)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaBorders/BotBorder"]
position = Vector2(299.25, 27.5)
shape = SubResource("RectangleShape2D_3qolq")

[node name="RightBorder" type="StaticBody2D" parent="AreaBorders"]
position = Vector2(-15, 603)
rotation = -1.5708

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaBorders/RightBorder"]
position = Vector2(299.25, 27.5)
shape = SubResource("RectangleShape2D_3qolq")

[node name="LeftBorder" type="StaticBody2D" parent="AreaBorders"]
position = Vector2(562, 602)
rotation = -1.5708

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaBorders/LeftBorder"]
position = Vector2(299.25, 27.5)
shape = SubResource("RectangleShape2D_3qolq")

[node name="Rudolph" type="Node2D" parent="."]
position = Vector2(112.5, 105)
scale = Vector2(3, 3)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Rudolph"]
sprite_frames = SubResource("SpriteFrames_0dlqw")
animation = &"Arm_Down_Breathing"
autoplay = "Default"

[node name="DialogueTrigger" type="Area2D" parent="Rudolph/AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rudolph/AnimatedSprite2D/DialogueTrigger"]
position = Vector2(65.0854, 5.23492)
rotation = -0.256187
shape = SubResource("RectangleShape2D_7us1b")

[node name="FallTrigger" type="Area2D" parent="Rudolph/AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rudolph/AnimatedSprite2D/FallTrigger"]
position = Vector2(62.8333, 29.3333)
rotation = -0.00437988
shape = SubResource("RectangleShape2D_d2mki")

[node name="BreathPos" type="Node2D" parent="Rudolph/AnimatedSprite2D"]
position = Vector2(0.5, 10.6667)

[node name="StaticBody2D" type="StaticBody2D" parent="Rudolph"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rudolph/StaticBody2D"]
position = Vector2(-9.71986, -4.99789)
rotation = -0.588248
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_io5b7")

[node name="Rudolph Collider" type="StaticBody2D" parent="Rudolph"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rudolph/Rudolph Collider"]
position = Vector2(0.166667, 7.33333)
shape = SubResource("CapsuleShape2D_u1k1r")

[node name="Player" type="CharacterBody2D" parent="." groups=["Player"]]
z_index = 1
position = Vector2(317, 522)
collision_layer = 5
collision_mask = 5
script = ExtResource("4_fcokj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
rotation = 1.5708
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_jl5j7")
animation = &"Attack"
frame = 3
frame_progress = 0.373554
script = ExtResource("8_pob46")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-3, -1)
scale = Vector2(0.0664063, 0.0664063)
shape = SubResource("CapsuleShape2D_b1jgi")

[node name="ShootingPoint" type="Marker2D" parent="Player"]
unique_name_in_owner = true
position = Vector2(15, 9)

[node name="Camera" type="Camera2D" parent="Player"]
zoom = Vector2(1.92, 1.92)
limit_left = 0
limit_top = 0
limit_right = 600
limit_bottom = 600
drag_left_margin = 1.0
drag_top_margin = 0.0
drag_right_margin = 1.0
drag_bottom_margin = 1.0
editor_draw_drag_margin = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = 2
position = Vector2(129, -144)
rotation = 1.06983
scale = Vector2(5.75, 5.75)
amount = 300
process_material = SubResource("ParticleProcessMaterial_ui4m1")
texture = ExtResource("4_3quns")
lifetime = 6.0
preprocess = 215.7
speed_scale = 0.5
visibility_rect = Rect2(-100, -100, 400, 200)

[node name="Control" parent="." instance=ExtResource("10_xfvfa")]

[connection signal="animation_looped" from="Rudolph/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="body_entered" from="Rudolph/AnimatedSprite2D/DialogueTrigger" to="." method="_on_dialogue_trigger_body_entered"]
[connection signal="area_entered" from="Rudolph/AnimatedSprite2D/FallTrigger" to="." method="_on_fall_trigger_area_entered"]
[connection signal="body_entered" from="Rudolph/AnimatedSprite2D/FallTrigger" to="." method="_on_fall_trigger_body_entered"]
